--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,10 @@
     <title>Main page</title>
 </head>
 <body>
-    <h1>Products List</h1>
-    <ul>
+    <h1>Products List</h1>    
         {% for product in products %}
-            <li>ID: <a href="#">{{ product.id }}</a>, Name: {{ product.name }}, Quantity: {{ product.quantity }}</li>
-        {% endfor %}
-    </ul>    
+            ID: <a href="#">{{ product.id }}</a>, Name: {{ product.name }}, Quantity: {{ product.quantity }}
+            <br>
+        {% endfor %}    
 </body>
 </html>
