--- a/templates/products.html
+++ b/templates/products.html
@@ -5,13 +5,9 @@
 </head>
 <body>
     <h1>Product Detail</h1>
-    {% if product %}
-        <p>ID: {{ product.id }}</p>
-        <p>Name: {{ product.name }}</p>
-        <p>Quantity: {{ product.quantity }}</p>
-    {% else %}
-        <p>Product not found.</p>
-    {% endif %}
-    <a href="{% url 'product' %}">Back to Products List</a>
+    {% for item in Item %}
+            ID: <a href="#">{{ item.id }}</a>, Name: {{ item.name }}, Quantity: {{ item.quantity }}
+            <br>
+        {% endfor %}
 </body>
 </html>
